builder/tests/08-unrecognized-attribute.stderr
error: builder attribute supports "each" argument only
  --> $DIR/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
